--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,13 +12,16 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.13",
     "axios": "^1.11.0",
+    "firebase": "^12.2.1",
     "framer-motion": "^12.23.12",
     "lucide-react": "^0.543.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.8.2",
-    "tailwindcss": "^4.1.13"
+    "react-toastify": "^11.0.5",
+    "tailwindcss": "^4.1.13",
+    "toastify": "^2.0.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
