--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "start": "vite preview --port $PORT --host"
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.13",
@@ -26,6 +26,7 @@
     "react-router-dom": "^7.8.2",
     "react-syntax-highlighter": "^15.6.6",
     "react-toastify": "^11.0.5",
+    "serve": "^14.2.5",
     "tailwindcss": "^4.1.13",
     "toastify": "^2.0.1"
   },
