--- a/frontend/.env
+++ b/frontend/.env
@@ -1,1 +1,11 @@
 VITE_GEMINI_API_KEY=AIzaSyAE1wNbllIfA6dUjadWzdoAs5StzXlUdPk
+VITE_GEMINI_API_URL=https://generativelanguage.googleapis.com/v1beta/models/gemini-2.5-flash:generateContent
+
+VITE_FIREBASE_API_KEY=AIzaSyAk7EOUaBhAbPsF3t5oBItWprze6IZH_OY
+VITE_FIREBASE_AUTH_DOMAIN=to-do-707f2.firebaseapp.com
+VITE_FIREBASE_DATABASE_URL=https://to-do-707f2-default-rtdb.firebaseio.com
+VITE_FIREBASE_PROJECT_ID=to-do-707f2
+VITE_FIREBASE_STORAGE_BUCKET=to-do-707f2.firebasestorage.app
+VITE_FIREBASE_MESSAGING_SENDER_ID=239382297060
+VITE_FIREBASE_APP_ID=1:239382297060:web:a0d49a4aa9c8cff59a6ff1
+VITE_FIREBASE_MEASUREMENT_ID=G-SL7F0W0WQN
