--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.13",
+    "@vapi-ai/web": "^2.3.10",
     "axios": "^1.11.0",
     "date-fns": "^4.1.0",
     "dotenv": "^17.2.2",
@@ -20,6 +21,7 @@
     "jspdf": "^3.0.2",
     "lottie-react": "^2.4.1",
     "lucide-react": "^0.543.0",
+    "prism-react-renderer": "^2.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.5.0",
