--- a/frontend/.env
+++ b/frontend/.env
@@ -9,3 +9,6 @@ VITE_FIREBASE_STORAGE_BUCKET=to-do-707f2.firebasestorage.app
 VITE_FIREBASE_MESSAGING_SENDER_ID=239382297060
 VITE_FIREBASE_APP_ID=1:239382297060:web:a0d49a4aa9c8cff59a6ff1
 VITE_FIREBASE_MEASUREMENT_ID=G-SL7F0W0WQN
+
+VITE_VAPI_PUBLIC_KEY = 186d2aa2-bfe7-4590-b014-8e3da47cb533
+VITE_VAPI_ASSISTANT_ID = 83c6cc8b-372d-4125-9e78-1836ac9c74dc
